--- a/SHP_file_from_XML_file_V1.ipynb
+++ b/SHP_file_from_XML_file_V1.ipynb
@@ -4,7 +4,10 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOIQOl2A+jVcdtJEgQ6rRH1",
+      "collapsed_sections": [
+        "DVYAFyOA45o3"
+      ],
+      "authorship_tag": "ABX9TyNQaC+6wcYZrsVbSkqowR7Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -717,7 +720,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Creating GeoDataFrame (data frame with geometry) using XML file\n"
+        "# Creating SHP file (data frame with geometry) using XML file\n"
       ],
       "metadata": {
         "id": "MaNwZwcp46G5"
@@ -1803,7 +1806,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 263
+          "height": 243
         },
         "id": "enwqKO7_RvLN",
         "outputId": "e23123bb-e8ca-4a14-b838-0533cd4c524c"
